MODUSERSBL-230: Upgrade module to Vert.x 5.0 (#232)